--- a/src/components/WeatherLocation/styles.css
+++ b/src/components/WeatherLocation/styles.css
@@ -8,9 +8,12 @@
     padding-left: initial
 }
 .weatherLocationContainer{
-    margin: 30px;
-    width: 400px;
-    padding: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: calc(100% - 45px);
+    box-sizing: border-box;
+    min-width: 430px;
+    padding: 25px;
     font-family: 'Roboto', sans-serif;
     box-shadow: 10px 10px 42px -12px rgba(0,0,0,0.75);
 }
