--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,4 +1,3 @@
-
 @media (max-width: 64em){
     .locationList {
         background: ghostwhite;
@@ -6,4 +5,11 @@
         overflow: auto;
         margin-bottom: 20px
     }
+}
+
+.forecast-title {
+    color: grey;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
