--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,19 @@
 
 .detail {
   background: ghostwhite;
-  height: 100vh;
-  widows: 100%;
+  height: 85vh;
+  width: calc(100% - 40px);
   box-shadow: 10px 10px 42px -12px rgba(100, 36, 36, 0.75);
   padding: 15px;
+  overflow: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+@media(max-width: 64em){
+  .detail {
+    background: ghostwhite;
+    height: 40vh;
+
+  }
 }
