--- a/src/components/WeatherLocation/styles.css
+++ b/src/components/WeatherLocation/styles.css
@@ -16,6 +16,7 @@
     padding: 25px;
     font-family: 'Roboto', sans-serif;
     box-shadow: 10px 10px 42px -12px rgba(0,0,0,0.75);
+    cursor: pointer;
 }
 .locationCont h1{
     margin: 0;
