--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,10 +1,13 @@
 @media (max-width: 64em){
     .locationList {
         background: ghostwhite;
-        max-height: 30vh;
-        overflow: auto;
-        margin-bottom: 20px
+        max-height: 45vh;
+        margin-bottom: 20px;
     }
+}
+.locationList {
+    overflow: auto;
+    height: 85vh;
 }
 
 .forecast-title {
